Fixed h1 visibility

--- a/src/components/Header/Hero.module.scss
+++ b/src/components/Header/Hero.module.scss
@@ -39,8 +39,7 @@
 						0 1.5px 0 rgba(17, 48, 44, 0.15);
 					color: var(--color-secondary-light);
 					color: var(--color-tertiary-light);
-
-					// visibility: hidden;
+					visibility: hidden;
 				}
 
 				* > .highlighted {
